--- a/resources/layout.fxml
+++ b/resources/layout.fxml
@@ -64,7 +64,6 @@
                 <RowConstraints maxHeight="239.0" minHeight="10.0" prefHeight="239.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView fx:id="table_log" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="true" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                      <children>
                         <Button fx:id="btn_clear" mnemonicParsing="false" onAction="#on_btn_clear" text="clear" />
@@ -72,7 +71,7 @@
                         <Button fx:id="btn_stop" mnemonicParsing="false" onAction="#on_btn_stop" text="stop" />
                      </children>
                   </HBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                  <VBox focusTraversable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1">
                      <children>
                         <CheckBox fx:id="check_lvl_v" mnemonicParsing="false" onAction="#on_check_lvl" selected="true" text="Verbose">
                            <font>
@@ -100,6 +99,7 @@
                            </font></CheckBox>
                      </children>
                   </VBox>
+                  <TableView fx:id="table_log" editable="true" focusTraversable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tableMenuButtonVisible="true" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="2" />
                </children>
             </GridPane>
          </center>
