--- a/resources/layout.fxml
+++ b/resources/layout.fxml
@@ -3,12 +3,12 @@
 <?language clojure?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -56,7 +56,7 @@
             </MenuBar>
          </top>
          <left>
-            <GridPane BorderPane.alignment="CENTER">
+            <GridPane prefHeight="512.0" prefWidth="153.0" BorderPane.alignment="CENTER">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -65,15 +65,20 @@
                 <RowConstraints maxHeight="467.0" minHeight="10.0" prefHeight="467.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TreeView editable="true" prefHeight="200.0" prefWidth="200.0" showRoot="false" GridPane.rowIndex="1" />
+                  <HBox prefHeight="100.0" prefWidth="137.0">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#on_btn_scan" text="scan" />
+                     </children>
+                  </HBox>
+                  <ListView fx:id="list_devices" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                </children>
             </GridPane>
          </left>
          <bottom>
-            <StatusBar BorderPane.alignment="CENTER" />
+            <StatusBar progress="0.5" text="(TEST) this is statusbar" BorderPane.alignment="CENTER" />
          </bottom>
          <center>
-            <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <StackPane prefHeight="150.0" prefWidth="721.0" BorderPane.alignment="CENTER">
                <children>
                   <GridPane>
                     <columnConstraints>
@@ -129,7 +134,7 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                        <BorderPane prefHeight="200.0" prefWidth="737.0" GridPane.rowIndex="1">
                            <right>
                               <Region maxWidth="-Infinity" minWidth="40.0" prefWidth="40.0" style="-fx-background-color: #FF00FF;" BorderPane.alignment="CENTER" />
                            </right>
