--- a/resources/highlight.fxml
+++ b/resources/highlight.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
-<?import org.controlsfx.control.CheckListView?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.65">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -21,31 +21,31 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <CheckListView fx:id="list_highlight" />
+      <ListView fx:id="list_highlight" prefHeight="200.0" prefWidth="200.0" />
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Button fx:id="btn_add" mnemonicParsing="false" prefWidth="100.0" text="ADD" />
-                  <Button fx:id="btn_remove" mnemonicParsing="false" prefWidth="100.0" text="REMOVE" />
-                  <Button fx:id="btn_up" mnemonicParsing="false" prefWidth="100.0" text="UP" />
-                  <Button fx:id="btn_down" mnemonicParsing="false" prefWidth="100.0" text="DOWN" />
+                  <Button fx:id="btn_add" mnemonicParsing="false" onAction="#on_btn_add" prefWidth="100.0" text="ADD" />
+                  <Button fx:id="btn_remove" mnemonicParsing="false" onAction="#on_btn_remove" prefWidth="100.0" text="REMOVE" />
+                  <Button fx:id="btn_up" mnemonicParsing="false" onAction="#on_btn_up" prefWidth="100.0" text="UP" />
+                  <Button fx:id="btn_down" mnemonicParsing="false" onAction="#on_btn_down" prefWidth="100.0" text="DOWN" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <CheckBox fx:id="chk_regex" mnemonicParsing="false" text="regex" />
                   <TextField fx:id="txt_fileter_string" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" layoutX="10.0" layoutY="170.0" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <CheckBox fx:id="check_regex11" mnemonicParsing="false" text="regex" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Label text="Background" />
                   <ColorPicker fx:id="color_background" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
                   <Label text="Foreground" />
                   <ColorPicker fx:id="color_foregound" />
                </children>
