--- a/resources/itm_highlight.fxml
+++ b/resources/itm_highlight.fxml
@@ -6,7 +6,7 @@
 
 <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <CheckBox fx:id="check_example" mnemonicParsing="false" text="CheckBox" />
+      <CheckBox fx:id="check_example" mnemonicParsing="false" onAction="#on_check" text="CheckBox" />
       <Label fx:id="lbl_filter_string" text="Label" />
    </children>
 </HBox>
