--- a/resources/highlight.fxml
+++ b/resources/highlight.fxml
@@ -6,51 +6,44 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <ListView fx:id="list_highlight" prefHeight="200.0" prefWidth="200.0" />
-      <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
-         <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+         <center>
+            <ListView fx:id="list_highlight" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="88.0" prefWidth="400.0" BorderPane.alignment="CENTER" />
+         </center>
+         <bottom>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="btn_new" mnemonicParsing="false" onAction="#on_btn_new" prefWidth="100.0" text="NEW" />
-                  <Button fx:id="btn_remove" mnemonicParsing="false" onAction="#on_btn_remove" prefWidth="100.0" text="REMOVE" />
-                  <Button fx:id="btn_up" mnemonicParsing="false" onAction="#on_btn_up" prefWidth="100.0" text="UP" />
-                  <Button fx:id="btn_down" mnemonicParsing="false" onAction="#on_btn_down" prefWidth="100.0" text="DOWN" />
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <Button fx:id="btn_new" mnemonicParsing="false" onAction="#on_btn_new" prefWidth="100.0" text="NEW" />
+                        <Button fx:id="btn_remove" mnemonicParsing="false" onAction="#on_btn_remove" prefWidth="100.0" text="REMOVE" />
+                        <Button fx:id="btn_up" mnemonicParsing="false" onAction="#on_btn_up" prefWidth="100.0" text="UP" />
+                        <Button fx:id="btn_down" mnemonicParsing="false" onAction="#on_btn_down" prefWidth="100.0" text="DOWN" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <TextField fx:id="txt_filter_string" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" layoutX="10.0" layoutY="170.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <CheckBox fx:id="check_regex" mnemonicParsing="false" text="regex" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+                     <children>
+                        <Label text="Background" />
+                        <ColorPicker fx:id="color_background" />
+                        <Label text="Foreground" />
+                        <ColorPicker fx:id="color_foreground" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <TextField fx:id="txt_filter_string" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="170.0" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <CheckBox fx:id="check_regex" mnemonicParsing="false" text="regex" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Background" />
-                  <ColorPicker fx:id="color_background" />
-                  <Label text="Foreground" />
-                  <ColorPicker fx:id="color_foreground" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </children>
-</GridPane>
+            </VBox>
+         </bottom>
+      </BorderPane>
