--- a/resources/itm_highlight.fxml
+++ b/resources/itm_highlight.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <CheckBox fx:id="check_example" mnemonicParsing="false" onAction="#on_check" text="CheckBox" />
-      <Label fx:id="lbl_filter_string" text="Label" />
-   </children>
-</HBox>
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="itm_highlight_root" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+         <left>
+                  <CheckBox fx:id="check_example" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#on_check" styleClass="itm_highlight_check" BorderPane.alignment="CENTER" />
+         </left>
+         <center>
+                  <TextField fx:id="lbl_filter_string" editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="itm_highlight_text" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
